Fixing the extra padding above post title
I guess these things come with a padding and increasing the font size blows up the padding, which is proportional??

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -57,6 +57,8 @@ body {
 }
 
 .post-title {
+  padding: 0;
+  margin: 0;
   color: white;
   font-weight: 100;
   font-size: 4rem;
